modificacion para actualizar los publish con nuevo metodo solicitado por el core

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,12 +67,12 @@ integrations.matching.auto-subscriptions[6].event-name=${MATCHING_AUTO_SUBSCRIBE
 
 integrations.matching.publish-enabled=${MATCHING_PUBLISH_ENABLED:true}
 integrations.matching.publish-path=${MATCHING_PUBLISH_PATH:/publish}
-integrations.matching.publish-source=${MATCHING_PUBLISH_SOURCE:matching}
-integrations.matching.publish-top3-channel=${MATCHING_PUBLISH_TOP3_CHANNEL:matching.cotizacion.emitida}
+integrations.matching.publish-source=${MATCHING_PUBLISH_SOURCE:}
+integrations.matching.publish-top3-channel=${MATCHING_PUBLISH_TOP3_CHANNEL:cotizacion}
 integrations.matching.publish-top3-event-name=${MATCHING_PUBLISH_TOP3_EVENT_NAME:emitida}
-integrations.matching.publish-cotizaciones-channel=${MATCHING_PUBLISH_COT_CHANNEL:matching.solicitud.emitida}
-integrations.matching.publish-cotizaciones-event-name=${MATCHING_PUBLISH_COT_EVENT:emitida}
-integrations.matching.publish-pago-channel=${MATCHING_PUBLISH_PAGO_CHANNEL:matching.pago.emitida}
+integrations.matching.publish-cotizaciones-channel=${MATCHING_PUBLISH_COT_CHANNEL:solicitud}
+integrations.matching.publish-cotizaciones-event-name=${MATCHING_PUBLISH_COT_EVENT:resumen}
+integrations.matching.publish-pago-channel=${MATCHING_PUBLISH_PAGO_CHANNEL:pago}
 integrations.matching.publish-pago-event-name=${MATCHING_PUBLISH_PAGO_EVENT:emitida}
 
 # Users service integration (login)
