--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,10 @@ server.port=${SERVER_PORT:8080}
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 server.forward-headers-strategy=framework
+springdoc.api-docs.path=/api/v3/api-docs
+springdoc.swagger-ui.path=/api/swagger-ui
+springdoc.swagger-ui.config-url=/api/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/api/v3/api-docs
 
 # Default metadata for outbound responses
 module.response.webhook-url=${MODULE_RESPONSE_WEBHOOK_URL:http://alb-stg-31795251.us-east-2.elb.amazonaws.com/api/webhook}
