--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,3 +12,5 @@ management.endpoint.health.show-details=always
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration,org.springframework.boot.autoconfigure.amqp.RabbitAnnotationDrivenConfiguration
 
+integrations.matching.auto-subscribe-enabled=false
+integrations.matching.publish-enabled=false
